# SPINE

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
SDBM_test/: MSE_test.ipynb  experiment_real.py  experiment_real_adv.py  experiment_real_breast_cancer.py  experiment_real_enriched.py  experiment_real_gen.py  experiment_real_repeat.py  experiment_real_scalability.py  get_data.py  get_data_adv.py  get_data_enriched.py  get_data_isolate_test.py  get_data_trans.py  ssnp.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/spine/: __init__.py  cli.py
src/spine/data/: load_data.py
src/spine/experiments/: MSE_test.ipynb  eval_adversarial.py  eval_generalizability.py  eval_map.py  eval_map_adversarial.py  eval_map_generalizability.py  eval_map_random_vals.py  eval_scalability.py  eval_stability.py  hyperparameter_tuning.py  main_eval.py  real_life_example.ipynb
src/spine/models/: dice_gradients.py  vae.py
src/spine/models/DiCE/dice_ml/: counterfactual_explanations.py  data.py  dice.py  diverse_counterfactuals.py  model.py
src/spine/models/DiCE/dice_ml/data_interfaces/: base_data_interface.py  private_data_interface.py  public_data_interface.py
src/spine/models/DiCE/dice_ml/explainer_interfaces/: dice_tensorflow2.py  explainer_base.py
src/spine/models/DiCE/dice_ml/model_interfaces/: base_model.py  keras_tensorflow_model.py
src/spine/models/DiCE/dice_ml/utils/: helpers.py
src/spine/models/preprocess/: binary_classifiers.py  train_test_classifiers.py  train_test_classifiers_adversarial.py  train_test_classifiers_generalizability.py  varying_performance_classifiers.py
src/spine/models/transformers/: lamp_scaled.py  ssnp.py  transformer.py
src/spine/models/utils/: utils.py  visuals.ipynb
src/spine/models/visualization/: create_map_embedding.py  create_map_embedding_no_intermediate.py  plots.py
tests/: __init__.py  test_spine.py
