[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spine"
version = "0.1.0"
description = "SPINE: Local Enriched Decision Boundary Map Visualization for Machine Learning Classifiers"
readme = "README.rst"
authors = [
  {name = "Imke Bloemen", email = "imkebloemen@gmail.com"}
]
maintainers = [
  {name = "Imke Bloemen", email = "imkebloemen@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ImkeBloemen/spine/issues"
changelog = "https://github.com/ImkeBloemen/spine/blob/master/changelog.md"
homepage = "https://github.com/ImkeBloemen/spine"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

