[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spine"
version = "0.1.0"
description = "SPINE: Local Enriched Decision Boundary Map Visualization for Machine Learning Classifiers"
readme = "README.rst"
authors = [
  {name = "Imke Bloemen", email = "imkebloemen@gmail.com"}
]
maintainers = [
  {name = "Imke Bloemen", email = "imkebloemen@gmail.com"}
]

requires-python = "=3.9"

classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "numpy==1.21.5",
  "cython>=0.29.30",
  "pyarrow==6.0.1",
  "pandas<2.0.0",
  "seaborn==0.11.2",
  "requests==2.28.1",
  "matplotlib>=3.5.0",
  "tensorflow-gpu==2.10.0",
  "tensorflow==2.10.0",
  "scikit-learn==1.0.2",
  "numba==0.55.2",
  "jsonschema==4.5.1",
  "tqdm==4.64.1",
  "raiutils>=0.4.0",
  "h5py==3.6.0",
  "imbalanced-learn==0.8.0",
  "umap-learn==0.5.3",
  "scipy==1.10.1",
  "joblib==1.1.0",
  "pyod==0.9.8",
  "scikit-dimension==0.3.4",
  "scikit-image==0.19.3",
  "ipython>=7.17.0,<8.0.0",
  "matplotlib-inline>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ImkeBloemen/spine/issues"
changelog = "https://github.com/ImkeBloemen/spine/blob/master/changelog.md"
homepage = "https://github.com/ImkeBloemen/spine"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

